--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,6 +1,6 @@
 [mysql]
-host = localhost
+host = "localhost"
 port = 3306
-database = voeding_database
-user = root
-password = root
+database = "voeding_database"
+user = "root"
+password = "root"
